<resources>
    <string name="app_name">Robots Wed6</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username_noexist">"该用户不存在，请先注册后重新登录"</string>
    <string name="password_wrong">"密码错误"</string>

    <!-- Strings related to register -->
    <string name="error_empty_email">"注册邮箱不能为空！"</string>
    <string name="error_used_email">"该邮箱已被注册，请更换邮箱后重新注册"</string>
    <string name="error_invalid_email">"请使用北航邮箱注册"</string>
    <string name="error_empty_reg_password">"密码不能为空"</string>
    <string name="error_invalid_reg_password">"密码不合法，请设置长度超过6位的密码"</string>
    <string name="error_invalid_confirm_password">"两次输入的密码不一致，请检查后重新输入"</string>
    <string name="register_success">"注册成功！"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Robots Wed6</string>
    <string name="nav_header_subtitle">not login</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Quit</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Mapping</string>
    <string name="menu_slideshow">Navigation</string>
    <string name="menu_grab">Grabbing</string>
    <string name="menu_introduction">Introduction</string>
    <string name="baseurl">"http://10.136.142.46:60130/"</string>
</resources>
