<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_grabbing"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_grab" />
        <item
            android:id="@+id/nav_introduction"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/menu_introduction" />
    </group>
</menu>